package component;

public class Hardware extends BasicComponent {
    public Hardware(String name, double unitCost, double unitWeight) {
        super(name, unitCost, unitWeight);
    }
} 