package component;

public class Paint extends BasicComponent {
    public Paint(String name, double unitCost, double unitWeight) {
        super(name, unitCost, unitWeight);
    }
} 