@startuml Manufacturing System Class Diagram

' Style and theme configuration
!theme plain
skinparam linetype polyline
skinparam nodesep 50
skinparam ranksep 50
skinparam packageStyle rectangle
skinparam padding 5
skinparam classFontSize 12
skinparam classAttributeFontSize 11
skinparam classFontName Arial
skinparam classBackgroundColor #F0F8FF
skinparam classArrowColor #2F4F4F
skinparam classBorderColor #008B8B
skinparam defaultTextAlignment center
skinparam handwritten false

' Layout settings
left to right direction
hide empty members
hide empty fields

' Title
title Manufacturing Company System - Class Diagram

' Packages
package "component" {
  interface Component {
    +getCost(): double
    +getWeight(): double
    +getName(): String
    +checkStockAvailability()
    +deductStock()
    +addStock()
    +getRequiredComponents()
  }
  
  abstract class BasicComponent {
    #name: String
    #unitCost: double
    #unitWeight: double
    +getCost()
    +getWeight()
    +getName()
  }
  
  class RawMaterial {
    +RawMaterial()
  }
  
  class Hardware {
    +Hardware()
  }
  
  class Paint {
    +Paint()
  }
  
  class Product {
    -name: String
    -requiredComponents: Map
    +Product()
    +addComponent()
    -hasCircularDependency()
    +getCost()
    +getWeight()
    +deductStock()
  }
  
  package "factory" {
    class ComponentFactory <<static>> {
      +createComponent()
      +createProduct()
    }
  }
}

package "process" {
  interface ProcessState {
    +handleProcess()
    +isTerminal()
    +getStateContext()
  }
  
  class WaitingForStockState {
    +handleProcess()
    +isTerminal()
    +getStateContext()
  }
  
  class InManufacturingState {
    -random: Random
    +handleProcess()
    +isTerminal()
    +getStateContext()
  }
  
  class CompletedState {
    +handleProcess()
    +isTerminal()
    +getStateContext()
  }
  
  class FailedState {
    +handleProcess()
    +isTerminal()
    +getStateContext()
  }
  
  enum ManufacturingOutcome {
    COMPLETED
    FAILED_STOCK_SHORTAGE
    FAILED_SYSTEM_ERROR
    FAILED_DAMAGED_COMPONENT
  }
  
  class ManufacturingProcess {
    -product: Product
    -inventoryManager: InventoryManager
    -currentState: ProcessState
    -finalOutcome: ManufacturingOutcome
    -observers: List<ProcessObserver>
    +ManufacturingProcess()
    +addObserver()
    +removeObserver()
    +setState()
    +process()
    +isCompleted()
    +recordResult()
    +getFinalOutcome()
  }
}

package "observer" {
  interface ProcessObserver {
    +onStateChange()
    +onProcessCompleted()
  }
  
  class ConsoleLogger {
    +onStateChange()
    +onProcessCompleted()
  }
}

package "system" {
  class InventoryManager {
    -stockLevels: Map<Component, Integer>
    +setInitialStock()
    +checkStock()
    +deductStock()
    +addStock()
    +getStockLevel()
  }
  
  class ManufacturingOrder {
    -product: Product
    -quantity: int
    +getProduct()
    +getQuantity()
  }
  
  class DataLoader {
    -basicComponentsMap: Map<String, Component>
    -loadBasicComponents()
    -loadManufacturingOrders()
    +loadDataAndInitialize()
  }
  
  class ReportGenerator {
    +generateReport()
  }
  
  class ManufacturingSystem {
    -componentsFilePath: String
    -productsFilePath: String
    -controller: ManufacturingController
    +ManufacturingSystem()
    +run()
  }
  
  class ManufacturingController {
    -dataLoader: DataLoader
    -inventoryManager: InventoryManager
    -reportGenerator: ReportGenerator
    +ManufacturingController()
    +processManufacturingOrders()
    -processOrders()
    -createManufacturingProcess()
    -completeManufacturingProcess()
  }
}

class Main {
  +main(args: String[])
}

' Relationships (Inheritance)
Component <|.. BasicComponent
BasicComponent <|-- RawMaterial
BasicComponent <|-- Paint
BasicComponent <|-- Hardware
Component <|.. Product

ProcessState <|.. WaitingForStockState
ProcessState <|.. InManufacturingState
ProcessState <|.. CompletedState
ProcessState <|.. FailedState

ProcessObserver <|.. ConsoleLogger

' Associations
Product "1" *-- "0..*" Component : contains >
ManufacturingProcess "1" o-- "1" ProcessState : currentState >
ManufacturingProcess "1" o-- "1" Product : manufactures >
ManufacturingProcess "1" o-- "1" InventoryManager : uses >
ManufacturingProcess "1" o-- "1" ManufacturingOutcome : records >
ManufacturingProcess "1" o-- "0..*" ProcessObserver : notifies >
ManufacturingOrder "1" o-- "1" Product : references >
DataLoader ..> ComponentFactory : uses >
ComponentFactory ..> Component : creates >
ComponentFactory ..> Product : creates >
ManufacturingSystem "1" *-- "1" ManufacturingController : delegates to >
ManufacturingController "1" *-- "1" InventoryManager : manages >
ManufacturingController "1" *-- "1" DataLoader : uses >
ManufacturingController "1" *-- "1" ReportGenerator : uses >
ManufacturingController ..> ManufacturingProcess : creates >
ManufacturingProcess ..> ManufacturingOutcome : uses >
InventoryManager o-- "0..*" Component : manages >
Main ..> ManufacturingSystem : uses >

@enduml 